<resources>
    <string name="app_name">aluno-online</string>
    <string name="sign_in">Entrar</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Registrar-se</string>
    <string name="forgot_the_password">Esqueci a senha</string>
    <string name="remember_password">Recuperar Senha</string>
    <string name="send">Enviar</string>
    <string name="profile">Perfil</string>
    <string name="name">Nome</string>
    <string name="registry">Matrícula</string>
    <string name="course">Curso</string>
    <string name="campus">Campus</string>
    <string name="turn">Turno</string>
    <string name="interests">Interesses</string>
    <string name="save">Salvar</string>
    <string name="googleLogin">Login with GooglePlus</string>
    <string name="facebookLogin">Login with Facebook</string>
</resources>
